syntax = "proto3";

import "google/protobuf/any.proto";

package transaction.request.types;

message createTransaction {
  uint32 planId = 1;
  string payMethod = 2;
  string userName = 3;
  uint32 serverId = 4;
}

message transactionResult {
  string tokenWs = 1;
  string tbkToken = 2;
}

message bigCommerceTransaction {
  google.protobuf.Any rawData = 1;
  string userName = 2;
  int32 planId = 3;
  int32 serverId = 4;
}
